--- a/Kursach/src/main/resources/templates/index.html
+++ b/Kursach/src/main/resources/templates/index.html
@@ -91,6 +91,7 @@
             output: {
                 get: function () {
                     return "Хэш: " + this.input
+                    //TODO делать запрос на бэкэнд
                 },
             }
         }
